# firefly-zephyr-sample

./: Kconfig  README.md  west.yml
applications/watch/: CMakeLists.txt  prj.conf
applications/watch/src/: fd_watch.c  fd_watch.h  fd_watch_screen_powering_off.c  fd_watch_screen_powering_off.h  fd_watch_screen_splash.c  fd_watch_screen_splash.h  fd_watch_screen_time.c  fd_watch_screen_time.h  main.c
